Project repair, all tests running and BlindsManager (code, Javadoc, tests)